--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,7 @@ body {
 .custom-popup .leaflet-popup-content {
   margin: 12px 16px;
   line-height: 1.4;
+  min-width: 300px !important;
 }
 
 .leaflet-popup-tip-container {
